styles/style.css
body {
    font-family: 'Work Sans', sans-serif;
    background-color: #F2F3F3;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.page-container {
    min-height: 100vh;
    position: relative;
    padding-bottom: 40px;
}

nav {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 80px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    background-color: #36626B;
}

nav h1 {
    font-weight: 700;
    color: #FFFFFF;
    font-size: 35px;
    margin-left: 35px;
}

.searchbar-container {
    position: relative;
}

#search-btn {
    position: absolute;
    top: 10px;
    right: 10px;
    z-index: 1;
    font-size: 34px;
    color: #777b81;
}

#search-btn:hover {
    cursor: pointer;
}

#searchbar {
    height: 52px;
    width: 400px;
    border-radius: 5px;
    border: none;
    font-size: 18px;
    padding-left: 10px;
    padding-bottom: 0;
    padding-right: 0;
}

#switch-units-btn {
    background-color: #FFFFFF;
    border-radius: 5px;
    margin-right: 35px;
    height: 52px;
    width: 100px;
    border: none;
    font-size: 23px;
    cursor: pointer;
    padding: 0;
    margin-left: 112px;
}

#opt-celcius {
    transition: 0.5s;
    margin-right: 4px;
    margin-left: 5px;
}

#opt-farenheit {
    transition: 0.5s;
    margin-left: 4px;
    margin-right: 5px;
}

.unit-option-selected {
    padding: 5px 5px 5px 5px;
    border-radius: 2px;
    background-color: rgba(54, 98, 107, 0.5);
}

.weather-container {
    margin-top: 40px;
    width: 900px;
    height: 545px;
    background-color: #F9F7F7;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: start;
    box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.25);
    border-radius: 10px;
}

.place-info {
    font-weight: 300;
    font-size: 36px;
    margin-left: 30px;
    margin-top: 20px;
}

.current-weather-container {
    margin-top: 20px;
    margin-left: 30px;
    margin-right: 30px;
    width: calc(100% - 60px);
    height: 195px;
    background-color: rgba(194, 194, 194, 0.3);
    border-radius: 10px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.temp-info {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    height: 130px;
    margin-left: 35px;
    padding-right: 30px;
    border-right: 2px solid black;
}

#current-temp {
    font-weight: 300;
    font-size: 36px;
}

.info-text {
    font-size: 20px;
    color: #45B29D;
}

#current-temp-feels {
    font-weight: 300;
    font-size: 24px;
}

.temp-img-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    height: 130px;
    margin-left: 30px;
    padding-right: 30px;
    border-right: 2px solid black;
}

.extra-weather-info {
    width: 35%;
    margin-left: 20px;
    margin-right: 35px;
    display: flex;
    flex-direction: row;
}

.column {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: start;
    width: 100%;
    margin-top: 5px;
}

#column1 {
    margin-right: 10px;
}

#column2 {
    margin-left: 10px;
}

.info-container {
    margin-bottom: 10px;
    text-align: center;
}

.info-container > p.value {
    font-size: 18px;
    font-weight: 300;
}

.daily-weather-container {
    margin-top: 25px;
    margin-bottom: 20px;
    margin-left: 30px;
    margin-right: 30px;
    width: calc(900px - 60px);
    height: 210px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

.daily-weather-info {
    height: 100%;
    width: 18%;
    background-color: rgba(194, 194, 194, 0.3);
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.weather-date {
    font-size: 18px;
}

.temp-info-daily {
    font-size: 18px;
    color: #45B29D;
}

.temp-value-daily {
    font-weight: 300;
    font-size: 18px;
}

footer {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 40px;
    background-color: #36626B;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    color: #FFFFFF;
}

footer a {
    color: #FFFFFF;
}

@media (max-width: 940px) {
    nav {
        flex-direction: column;
        height: max-content;
    }

    nav h1 {
        font-size: 30px;
        margin-top: 10px;
        margin-left: 0;
    }

    .searchbar-container {
        width: 270px;
        margin-top: 10px;
    }

    #searchbar {
        width: 100%;
        height: 35px;
        font-size: 14px;
    }

    #search-btn {
        font-size: 26px;
        top: 6px;
    }

    #switch-units-btn {
        font-size: 18px;
        height: 35px;
        margin-top: 15px;
        margin-bottom: 20px;
        width: 75px;
        margin-right: 0;
        margin-left: 0;
    }

    .unit-option-selected {
        padding: 3px 3px 3px 3px;
    }

    footer {
        height: 30px;
        font-size: 18px;
    }

    .weather-container {
        margin-top: 200px;
        width: calc(100% - 40px);
        height: max-content;
        margin-bottom: 30px;
    }

    .current-weather-container {
        display: block;
        height: max-content;
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(2, 1fr);
    }

    .temp-info {
        margin-top: 10px;
        margin-left: 0;
        justify-self: center;
        width: 100%;
    }

    .temp-img-container {
        margin-top: 10px;
        justify-self: center;
        padding-right: 0;
        margin-right: 35px;
        border-right: 0;
    }

    .extra-weather-info {
        margin-top: 10px;
        grid-column: 1 / 3;
        justify-self: center;
        align-self: center;
        margin-right: 0;
        margin-left: 0;
        width: max-content;
    }

    .daily-weather-container {
        display: grid;
        height: max-content;
        width: 100%;
        grid-template-rows: repeat(2, 1fr);
        grid-template-columns: repeat(3, 1fr);
        grid-row-gap: 20px;
        margin-left: 0;
        margin-right: 0;
        margin-bottom: 30px;
    }

    .daily-weather-info {
        justify-self: center;
        width: 152px;
    }

    #day1 {
        justify-self: start;
        margin-left: 30px;
    }

    #day3 {
        justify-self: end;
        margin-right: 30px;
    }

    #day4 {
        justify-self: start;
        margin-left: 30px;
    }

    .column {
        margin-left: 5px;
        margin-right: 5px;
    }
}

@media (max-width: 595px) {
    .extra-weather-info {
        margin-top: 30px;
    }

    #weather-img {
        width: 70px;
        height: 70px;
    }

    .daily-weather-container {
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(3, 1fr);
    }

    .daily-weather-info {
        width: 180px;
    }

    #day2 {
        justify-self: end;
        margin-right: 30px;
    }

    #day3 {
        justify-self: start;
        margin-left: 30px;
        margin-right: 0;
    }

    #day4 {
        justify-self: end;
        margin-right: 30px;
        margin-left: 0;
    }

    #day5 {
        justify-self: start;
        margin-left: 30px;
    }

    footer {
        height: 80px;
        text-align: center;
    }
}

@media (max-width: 535px) {
    .temp-info {
        height: calc(max-content + 20px);
        margin-left: 20px;
    }

    .temp-img-container {
        margin-right: 15px;
        text-align: center;
    }
}

@media (max-width: 488px) {
    .place-info {
        width: 100%;
        display: flex;
        justify-content: center;
        align-items: center;
        margin-left: 0;
    }

    .daily-weather-container {
        grid-template-columns: repeat(1, 1fr);
    }

    .daily-weather-info {
        width: 200px;
        height: 250px;
    }

    .temp-info-daily {
        margin-top: 10px;
    }

    #day1 {
        margin: 0;
        justify-self: center;
    }

    #day2 {
        margin: 0;
        justify-self: center;
    }

    #day3 {
        margin: 0;
        justify-self: center;
    }

    #day4 {
        margin: 0;
        justify-self: center;
    }

    #day5 {
        margin: 0;
        justify-self: center;
    }
}

@media (max-width: 415px) {
    .current-weather-container {
        grid-template-columns: 1fr;
        grid-template-rows: repeat(3, 1fr);
    }

    .temp-info {
        border: 0;
        margin-left: 0;
        padding-right: 0;
        width: 60%;
        padding-bottom: 20px;
        border-bottom: 2px solid #000000;
    }

    .temp-img-container {
        margin-right: 0;
        margin-left: 0;
        height: max-content;
        padding-bottom: 20px;
        border-bottom: 2px solid #000000;
        margin-top: 0;
    }

    .extra-weather-info {
        grid-column: 1 / 1;
        margin-bottom: 20px;
    }
}

@media (max-width: 360px) {
    .current-weather-container {
        grid-template-rows: 30% 30% 40%;
        height: max-content;
        padding-bottom: 30px;
    }

    .extra-weather-info {
        flex-direction: column;
    }

    #column1 {
        margin: 0;
    }
    
    #column2 {
        margin: 0;
    }
}

